= Version 1.4.0
 * ruby 1.9 compatible
 * fixes w.r.t. running autoproj under a Ruby interpreter that is not called
   'ruby' (as ruby1.9.1 on Debian)
 * add Arch-Linux support
 * fixes w.r.t. the 'doc' mode. In particular, the documentation installation
   now follows the layout.
 * some cosmetic fixes

= Version 1.3.4
 * Improve the RubyGems support
   - a given osdeps name can refer to a mixture of RubyGems and OS packages
   - the osdeps name can be different from the RubyGems package name
 * Fix: Autobuild::Package#depends_on_os_package(name) was not taken into
   account
 * Fix: the autoproj/ directory was deleted if "autoproj switch-config" fails.
   Fix that for the common case. It can still happen if the VCS is not
   accessible.

= Version 1.3.3
 * Fix: some configuration options were not properly saved
 * Fix: env.sh was messed up by partial builds (builds where a directory and/or
   package name is specified)
 * Fix: accept subdirectories of packages as argument to builds

= Version 1.3.2
 * Fix: GEM_HOME/bin was not added to env.sh

= Version 1.3.1
 * quick-fix bootstrapping from a git repository, and the switch-config
   command

= Version 1.3.0
 * Fix limitations of using layouts. autoproj is now able to find out
   cross-layout dependencies and act accordingly.
 
= Version 1.2.6
 * Fix mail reporting

= Version 1.2.5
 * Quickfix release: fix "autoproj bootstrap VCS URL"

= Version 1.2.4
 * manage LD_LIBRARY_PATH
 * only include the values relevant to our packages in the generated env.sh,
   instead of overcrowding them with inherited values.

= Version 1.2.3
 * fix the definition of the subversion package under ubuntu/debian
 * improve selection of packages on the command line. Most glitches
   that appears when using that feature are gone now.
 * allow to give options to the VCS during boostrap, and to switch
   the source of the configuration. I.e.
     autoproj switch-config git URL branch=newbranch